Commit 0010. Tintoreria Cardona. A trilingual page

--- a/index.html
+++ b/index.html
@@ -2,56 +2,59 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tintoreria Cardona</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Tintorería Cardona, the best laundry and dry cleaning service in Barcelona. We offer dry cleaning, dyeing, and more for all your clothing and household items.">
+    <meta name="keywords" content="dry cleaning, laundry, tinting, clothing, Barcelona">
+    <title>Tintorería Cardona | Laundry and Dry Cleaning Services in Barcelona</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    
-    <!-- Font Awesome icons -->
-    <script src="https://kit.fontawesome.com/a43703738c.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css">
-    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- Font Awesome icons -->
+	<script src="https://kit.fontawesome.com/a43703738c.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css">
+	<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="style.css">
-    
-    <!-- Custom scripts -->
-    <script src="script.js"></script>
+	<!-- Custom styles -->
+	<link rel="stylesheet" href="style.css">
+
+	<!-- Custom scripts -->
+	<script src="script.js"></script>
+
 </head>
 <body>
     <header class="header">
         <nav class="language-selector">
-            <a href="index.html"><i class="fas fa-flag flag-es"></i></a>
-            <a href="index_ca.html"><i class="fas fa-flag flag-ca"></i></a>
-            <a href="index_en.html"><i class="fas fa-flag flag-en"></i></a>
+            <a href="index.html" title="Versión en español"><i class="fas fa-flag flag-es"></i> ES</a>
+            <a href="index_ca.html" title="Versió en català"><i class="fas fa-flag flag-ca"></i> CA</a>
+            <a href="index_en.html" title="English version"><i class="fas fa-flag flag-en"></i> EN</a>
         </nav>
         <div class="header-content">
-            <img src="header-image.jpg" alt="Tintoreria Cardona Background">
+            <img src="./assets/images/Header.png" alt="Tintorería Cardona Background" class="img-fluid">
             <div class="logo">
-                <img src="tintoreria-cardona-logo.png" alt="Tintoreria Cardona Logo">
+                <h1 class="logo-title">Tintorería Cardona</h1>
             </div>
         </div>
     </header>
-    <main class="main">
-        <div class="container">
-            <section class="row">
-                <div class="col-md-8">
-                    <h1 data-aos="fade-up">Bienvenidos a Tintoreria Cardona</h1>
-                    <div class="col-md-4 animate-slideInRight">
-                        <img src="laundry-service.jpg" alt="Servicio de lavandería" class="img-fluid">
-                    </div>
-                    <p>Ofrecemos servicios profesionales de lavandería y limpieza en seco para todas sus prendas y objetos domésticos. Nuestro personal experimentado utiliza detergentes ecológicos para asegurar que sus prendas salgan limpias, frescas y con el aspecto más adecuado.</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="laundry-service.jpg" alt="Servicio de lavandería" class="img-fluid">
-                </div>
-            </section>
-        </div>
-    </div>
+    <!-- Rest of the HTML code -->
+
+	<main class="main">
+		<main class="main">
+			<div class="container">
+				<section class="row">
+					<div class="col-md-8">
+						<h1 data-aos="fade-up">Welcome to Tintoreria Cardona</h1>
+						<p>We offer professional laundry and dry cleaning services for all your clothing and household items. Our experienced staff uses eco-friendly detergents to ensure that your garments come out clean, fresh, and looking their best.</p>
+					</div>
+					<div class="col-md-4">
+						<img src="./assets/images/Laundry Service.png" alt="Laundry Service" class="img-fluid">
+					</div>
+				</section>
+			</div>
+	</div>
 	<hr>
 	<div class="row">
+	
 		<div class="col-md-4">
 			<h2>Nuestros servicios</h2>
 			<ul>
