Commit 0013. Tintoreria Cardona. Quick fix style II

--- a/index_ca.html
+++ b/index_ca.html
@@ -32,9 +32,11 @@
         <div class="header-content">
             <div class="logo">
                 <h1 class="logo-title">Tintorería Cardona</h1>
+                <div class="title-divider"></div>
             </div>
         </div>
     </header>
+
     <!-- Res -->
 	
 	<!-- Main content section -->
