--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <div class="header-content">
             <div class="logo">
                 <h1 class="logo-title">Tintorería Cardona</h1>
+                <div class="title-divider"></div>
             </div>
         </div>
     </header>
+
     <!-- Rest of the HTML code -->
 
 	<main class="main">
@@ -42,8 +44,8 @@
 			<div class="container">
 				<section class="row">
 					<div class="col-md-8">
-						<h1 data-aos="fade-up">Welcome to Tintoreria Cardona</h1>
-						<p>We offer professional laundry and dry cleaning services for all your clothing and household items. Our experienced staff uses eco-friendly detergents to ensure that your garments come out clean, fresh, and looking their best.</p>
+						<h1 data-aos="fade-up">Bienvenidos a Tintoreria Cardona</h1>
+						<p>Ofrecemos servicios profesionales de lavandería y limpieza en seco para todas sus prendas y objetos domésticos. Nuestro personal experimentado utiliza detergentes ecológicos para asegurar que sus prendas salgan limpias, frescas y con el aspecto más adecuado.</p>
 					</div>
 					<div class="col-md-4">
 						<img src="./assets/images/Laundry Service.png" alt="Laundry Service" class="img-fluid">
