--- a/index.html
+++ b/index.html
@@ -25,15 +25,32 @@
 <body>
     <header class="header">
         <div class="header-content">
-			<nav class="language-selector">
-				<a href="index.html" title="Versión en español"><i class="fas fa-flag flag-es"></i> ES</a>
-				<a href="index_ca.html" title="Versió en català"><i class="fas fa-flag flag-ca"></i> CA</a>
-				<a href="index_en.html" title="English version"><i class="fas fa-flag flag-en"></i> EN</a>
-			</nav>
-            <div class="logo">
-                <h1 class="logo-title">Tintorería Cardona</h1>
-                <div class="title-divider"></div>
-            </div>
+			<!-- Add this inside the <head> tag -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+	<!-- Replace the existing .language-selector with the following -->
+	<nav class="navbar navbar-expand-lg">
+	<div class="container">
+		<h1 class="logo-title">Tintorería Cardona</h1>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<i class="fas fa-globe"></i>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item">
+			<a class="nav-link" href="index.html" title="Versión en español"><i class="fas fa-flag flag-es"></i> ES</a>
+			</li>
+			<li class="nav-item">
+			<a class="nav-link" href="index_ca.html" title="Versió en català"><i class="fas fa-flag flag-ca"></i> CA</a>
+			</li>
+			<li class="nav-item">
+			<a class="nav-link" href="index_en.html" title="English version"><i class="fas fa-flag flag-en"></i> EN</a>
+			</li>
+		</ul>
+		</div>
+	</div>
+	</nav>
+
         </div>
     </header>
 
