Commit 0016. Tintoreria Cardona. Toogle for languages

--- a/index_en.html
+++ b/index_en.html
@@ -19,9 +19,7 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="style.css">
     
-    <!-- Custom scripts -->
-    <script src="script.js"></script>
-</head>
+
 <body>
     <header class="header">
         <div class="header-content">
@@ -209,5 +207,7 @@
 <script>
 	AOS.init();
 </script>
+<!-- Custom scripts -->
+<script src="scripts.js"></script>
 </body>
 </html>
