--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="style.css">
 
-	<!-- Custom scripts -->
-	<script src="script.js"></script>
+
 
 </head>
 <body>
@@ -192,5 +191,7 @@
 <script>
 	AOS.init();
 </script>
+<!-- Custom scripts -->
+<script src="scripts.js"></script>
 </body>
 </html>
