Commit 0017. Tintoreria Cardona. Fixing icons, and the toogle

--- a/index_en.html
+++ b/index_en.html
@@ -70,11 +70,11 @@
 		<div class="col-md-4">
 			<h2>Our services</h2>
 			<ul>
-                <li>Laundry and dry cleaning for all types of clothing</li>
-                <li>Bedding, towels, and other household items</li>
-                <li>Carpet cleaning</li>
-                <li>Leather and animal fur cleaning</li>
-                <li>Dyeing clothes</li>
+				<li data-aos="fade-up" data-aos-delay="100"><i class="fas fa-tshirt"></i> Laundry and dry cleaning for all types of garments</li>
+				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Bedding, towels, and other household items</li>
+				<li data-aos="fade-up" data-aos-delay="300"><i class="fas fa-broom"></i> Carpet cleaning</li>
+				<li data-aos="fade-up" data-aos-delay="400"><i class="fas fa-paw"></i> Animal skin and fur</li>
+				<li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-tint"></i> Dyeing of clothes</li>
 			</ul>
 		</div>
 		<div class="col-md-8">
