--- a/index_ca.html
+++ b/index_ca.html
@@ -78,7 +78,7 @@
 			<ul>
 				<li data-aos="fade-up" data-aos-delay="100"><i class="fas fa-tshirt"></i> Bugaderia i tintoreria per a tot tipus de peces</li>
 				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Ropa de llit, tovalloles i altres objectes domèstics</li>
-				<li data-aos="fade-up" data-aos-delay="300"><i class="fas fa-carpet"></i> Neteja d'alfombres</li>
+				<li data-aos="fade-up" data-aos-delay="300"><i class="fas fa-broom"></i> Neteja d'alfombres</li>
 				<li data-aos="fade-up" data-aos-delay="400"><i class="fas fa-paw"></i> Pell i pèl animal</li>
 				<li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-tint"></i> Tingem roba</li>
 			  </ul>
