Commit 0019. Tintoreria Cardona. Cambiar imagen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<p>Ofrecemos servicios profesionales de lavandería y limpieza en seco para todas sus prendas y objetos domésticos. Nuestro personal experimentado utiliza detergentes ecológicos para asegurar que sus prendas salgan limpias, frescas y con el aspecto más adecuado.</p>
 					</div>
 					<div class="col-md-4">
-						<img src="./assets/images/Laundry Service.png" alt="Laundry Service" class="img-fluid">
+						<img src="./assets/images/Header.png" alt="Laundry service" class="img-fluid">
 					</div>
 				</section>
 			</div>
