--- a/index_en.html
+++ b/index_en.html
@@ -62,7 +62,7 @@
 			<p>We provide professional laundry and dry cleaning services for all your clothing and household items. Our experienced staff eco-friendly detergents to ensure your clothes come out fresh, clean, and looking their best.</p>
 		</div>
 		<div class="col-md-4">
-			<img src="laundry-service.jpg" alt="Laundry service" class="img-fluid">
+			<img src="./assets/images/Header.png" alt="Laundry service" class="img-fluid">
 		</div>
 	</div>
 	<hr>
