Commit 0026. Tintoreria Cardona. Additional contact

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         <div class="header-content">
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
+					<div class="contact-info">
+						<a href="https://wa.me/34665622060" target="_blank" title="Contact us on WhatsApp">
+						  <i class="fab fa-whatsapp"></i> +34 665 622 060
+						</a>
+						<span>|</span>
+						<a href="tel:+34692731575" title="Call us">
+						  <i class="fas fa-phone-alt"></i> +34 692 731 575
+						</a>
+					  </div>
+					  
                     <h1 class="logo-title">Tintorería Cardona</h1>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-globe"></i>
