--- a/index.html
+++ b/index.html
@@ -22,41 +22,43 @@
 
 </head>
 <body>
-    <header class="header">
-        <div class="header-content">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container">
-					<div class="contact-info">
-						<a href="https://wa.me/34665622060" target="_blank" title="Contact us on WhatsApp">
-						  <i class="fab fa-whatsapp"></i> +34 665 622 060
-						</a>
-						<span>|</span>
-						<a href="tel:+34692731575" title="Call us">
-						  <i class="fas fa-phone-alt"></i> +34 692 731 575
-						</a>
-					  </div>
-					  
-                    <h1 class="logo-title">Tintorería Cardona</h1>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-globe"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html" title="Versión en español"><i class="fas fa-flag flag-es"></i> ES</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="index_ca.html" title="Versió en català"><i class="fas fa-flag flag-ca"></i> CA</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="index_en.html" title="English version"><i class="fas fa-flag flag-en"></i> EN</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </header>
+	<header class="header">
+		<div class="header-content">
+		  <nav class="navbar navbar-expand-lg">
+			<div class="container">
+			  <div class="header-info">
+				<div class="contact-info">
+				  <a href="https://wa.me/34665622060" target="_blank" title="Contact us on WhatsApp">
+					<i class="fab fa-whatsapp"></i> +34 665 622 060
+				  </a>
+				  <span>|</span>
+				  <a href="tel:+34692731575" title="Call us">
+					<i class="fas fa-phone-alt"></i> +34 692 731 575
+				  </a>
+				</div>
+				<h1 class="logo-title">Tintorería Cardona</h1>
+			  </div>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<i class="fas fa-globe"></i>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav ml-auto">
+				  <li class="nav-item">
+					<a class="nav-link" href="index.html" title="Versión en español"><i class="fas fa-flag flag-es"></i> ES</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="index_ca.html" title="Versió en català"><i class="fas fa-flag flag-ca"></i> CA</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="index_en.html" title="English version"><i class="fas fa-flag flag-en"></i> EN</a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
+		</div>
+	  </header>
+	  
     <!-- Rest of the HTML code -->
 
 	<main class="main">
