--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="header-content">
 		  <nav class="navbar navbar-expand-lg">
 			<div class="container">
-			  <div class="header-info">
+			  <div class="header-top">
 				<div class="contact-info">
 				  <a href="https://wa.me/34665622060" target="_blank" title="Contact us on WhatsApp">
 					<i class="fab fa-whatsapp"></i> +34 665 622 060
@@ -58,6 +58,7 @@
 		  </nav>
 		</div>
 	  </header>
+	  
 	  
     <!-- Rest of the HTML code -->
 
