Commit 0032. Tintoreria Cardona. Finishing up header. Quick fix VIII

--- a/index_ca.html
+++ b/index_ca.html
@@ -74,7 +74,7 @@
 						<p>Oferim serveis professionals de bugaderia i neteja en sec per a totes les vostres peces i objectes domèstics. El nostre personal experimentat utilitza detergents ecològics per assegurar que les vostres peces surtin netes, fresques i amb l'aspecte més adequat.</p>
 					</div>
 					<div class="col-md-4">
-						<img src="./assets/images/Header.png" alt="Laundry service" class="img-fluid">
+						<img src="./assets/images/header_3.png" alt="Laundry service" class="img-fluid">
 					</div>
 				</section>
 			</div>
