Commit 0033. Tintoreria Cardona.  Content modification II

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<h2>Nuestros servicios</h2>
 			<ul>
 				<li data-aos="fade-up" data-aos-delay="100"><i class="fas fa-tshirt"></i> Lavandería y tintoreria para todo tipo de prendas</li>
-				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Ropa de cama, toallas y otros objetos domésticos</li>
+				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Ropa de cama, toallas y demás prendas del hogar</li>
 				<li data-aos="fade-up" data-aos-delay="300"><i class="fas fa-broom"></i> Limpieza de alfombras</li>
 				<li data-aos="fade-up" data-aos-delay="400"><i class="fas fa-paw"></i> Piel y pelo animal</li>
 				<li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-tint"></i> Teñimos ropa</li>
