--- a/index_ca.html
+++ b/index_ca.html
@@ -85,10 +85,10 @@
 			<h2>Els nostres serveis</h2>
 			<ul>
 				<li data-aos="fade-up" data-aos-delay="100"><i class="fas fa-tshirt"></i> Bugaderia i tintoreria per a tot tipus de peces</li>
-				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Ropa de llit, tovalloles i altres objectes domèstics</li>
-				<li data-aos="fade-up" data-aos-delay="300"><i class="fas fa-broom"></i> Neteja d'alfombres</li>
+				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Ropa de llit, tovalloles i altres peces de roba de casa</li>
+				<li data-aos="fade-up" data-aos-delay="300"><i class="fas fa-broom"></i> Neteja de catifes</li>
 				<li data-aos="fade-up" data-aos-delay="400"><i class="fas fa-paw"></i> Pell i pèl animal</li>
-				<li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-tint"></i> Tingem roba</li>
+				<li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-tint"></i> Teñim roba</li>
 			  </ul>
 			</div>
 			<div class="col-md-8">
