--- a/index_en.html
+++ b/index_en.html
@@ -79,7 +79,7 @@
 			<h2>Our services</h2>
 			<ul>
 				<li data-aos="fade-up" data-aos-delay="100"><i class="fas fa-tshirt"></i> Laundry and dry cleaning for all types of garments</li>
-				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Bedding, towels, and other household items</li>
+				<li data-aos="fade-up" data-aos-delay="200"><i class="fas fa-bed"></i> Bedding, towels, and other household clothing</li>
 				<li data-aos="fade-up" data-aos-delay="300"><i class="fas fa-broom"></i> Carpet cleaning</li>
 				<li data-aos="fade-up" data-aos-delay="400"><i class="fas fa-paw"></i> Animal skin and fur</li>
 				<li data-aos="fade-up" data-aos-delay="500"><i class="fas fa-tint"></i> Dyeing of clothes</li>
