--- a/index_ca.html
+++ b/index_ca.html
@@ -104,11 +104,11 @@
                         <tbody>
                             <tr>
                                 <td>Camisa</td>
-                                <td>Des de 3,90€ per peça</td>
+                                <td>Des de 4,20€ per peça</td>
                             </tr>
                             <tr>
                                 <td>Polo</td>
-                                <td>Des de 4,25€ per peça</td>
+                                <td>Des de 4,50€ per peça</td>
                             </tr>
                             <tr>
                                 <td>Corbata</td>
@@ -116,11 +116,11 @@
                             </tr>
                             <tr>
                                 <td>Jersei</td>
-                                <td>Des de 4,90€ per peça</td>
+                                <td>Des de 5,50€ per peça</td>
                             </tr>
                             <tr>
-                                <td> Vestit </td>
-                                <td> Des de 14 € (americana i pantaló) </td>
+                                <td> Vestit/Tratje </td>
+                                <td> Des de 16 € (americana i pantaló) </td>
                             </tr>
 							<tr>
 								<td>Edredó petit</td>
